classDiagram
    class Task {
        +String description
        +Date scheduledDate
        +String time
        +String frequency
        +bool isComplete
        +markComplete()
        +markIncomplete()
        +updateTask(description, scheduledDate, time, frequency)
        +getFormattedDate()
        +getFormattedTime()
        +getTaskDetails()
    }

    class Pet {
        +String typeOfPet
        +String nameOfPet
        +String breedOfPet
        +int ageOfPet
        +List~Task~ tasks
        +updatePetInfo(type, name, breed, age)
        +addTask(task)
        +removeTask(task)
        +getTasks()
        +getPendingTasks()
        +getCompletedTasks()
        +getPetDetails()
    }

    class Owner {
        +String name
        +String address
        +List~Pet~ pets
        +int amountOfPets
        +addPet(pet)
        +removePet(pet)
        +updateOwnerInfo(name, address)
        +getPetCount()
        +getAllTasks()
        +getTasksByPet()
    }

    class Scheduler {
        +Owner owner
        +String openDays
        +String openTime
        +String closeTime
        +String openHours
        +String selectedDay
        +String selectedTime
        +Pet selectedPet
        +showAvailableDays()
        +showAvailableTimes()
        +fillOutPetInformation(owner, pet)
        +addTaskToPet(pet, task)
        +retrieveAllTasks()
        +organizeTasksByPet()
        +getPendingTasks()
        +getCompletedTasks()
        +completeTask(task)
        +schedulePetCare(day, time, pet)
        +submitSchedule()
        +showConfirmationMessage()
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has care tasks
    Scheduler "1" --> "0..1" Owner : manages
    Scheduler "1" --> "0..1" Pet : schedules selected pet
